--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ https://templatemo.com/tm-559-zay-shop
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="0" class="active"></li>
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="1"></li>
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="2"></li>
+            <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="3"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
