--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ p.introduce{
                             <figcaption class="gallery-caption">
                                 <h3 class="gallery-title">cast(여행체험 예약 사이트)-></h3>
                                 <ul class="gallery-spec">
-                                	<li class="gallery-spec-item"><strong class="gallery-spec-key">진행기간</strong> <span class="gallery-spec-value">2021.06.25 - 2021.07.30(5주)</span></li>
+                                	<li class="gallery-spec-item"><strong class="gallery-spec-key">진행기간</strong> <span class="gallery-spec-value">2021.11.30 - 2022.01.20(8주)</span></li>
                                 	<li class="gallery-spec-item"><strong class="gallery-spec-key">개발환경 OS</strong> <span class="gallery-spec-value">Window 10</span></li>
                                     <li class="gallery-spec-item"><strong class="gallery-spec-key">프로젝트 방식</strong> <span class="gallery-spec-value">SPRING MVC</span></li>
                                     <li class="gallery-spec-item"><strong class="gallery-spec-key">사용프로그램</strong> <span class="gallery-spec-value">SPRING TOOL SUITE 2.4.5, HEIDISQL 11.0.0.5919</span></li>
@@ -283,13 +283,11 @@ p.introduce{
                                     </li>
                                 </ul>
                                 <div id="work1Description">
-                                    <p><a href="https://sksskaw.kro.kr/cabbageMarket/index" target="_blank">배추마켓</a> 직거래, 중고거래, 경매거래를 안전거래로 이용할 수 있는 서비스 플랫폼입니다. 직거래 서비스 이용시 상품 판매자와 구매자간의 1:1 채팅을 통해 소통할 수 있습니다. WebSocket, Sockjs, STOMP를 이용하여 구현하였습니다.</p>
+                                    <p><a href="https://sksskaw.kro.kr/cabbageMarket/index" target="_blank">여행체험 예약 사이트</a> 직거래, 중고거래, 경매거래를 안전거래로 이용할 수 있는 서비스 플랫폼입니다. 직거래 서비스 이용시 상품 판매자와 구매자간의 1:1 채팅을 통해 소통할 수 있습니다. WebSocket, Sockjs, STOMP를 이용하여 구현하였습니다.</p>
                                 </div>
                                 <div class="ui-group">
-                                	<a role="button" class="ui-button" href="https://docs.google.com/spreadsheets/d/11qIN430h5MnSW7Y5FBP6BJFH_ZdQnHjkeCk9pk-sVT0/edit#gid=87600587" target="_blank">요구사항 정의서</a>
-                                	<a role="button" class="ui-button" href="./img/cabbage_ERD.png" target="_blank">ERD</a>
                                     <a role="button" class="ui-button" href="https://sksskaw.kro.kr/cabbageMarket/index" target="_blank">AWS</a>
-                                    <a role="button" class="ui-button" href="https://github.com/goodee-project/34_cabbageMarket" target="_blank">Git</a>
+                                    <a role="button" class="ui-button" href="https://github.com/tjdekf112/A2" target="_blank">Git</a>
                                 </div>
                             </figcaption>
                         </figure>
@@ -302,39 +300,25 @@ p.introduce{
                                 </tr>
                             </thead>
                             <tbody>
-                            	<tr>
-                                    <td data-th="Category"><span class="categ js">Chatting</span></td>
-                                    <td data-th="Source">
-                                    	<a href="https://github.com/goodee-project/34_cabbageMarket/blob/master/cabbageMarket/src/main/webapp/WEB-INF/view/directTrade/getChattingRoomList.jsp" target="_blank">ChattingRoomList</a>/
-                                    	<a href="https://github.com/goodee-project/34_cabbageMarket/blob/master/cabbageMarket/src/main/webapp/WEB-INF/view/directTrade/getChattingRoomOne.jsp" target="_blank">ChattingRoomOne</a>/
-                                    	<a href="https://github.com/goodee-project/34_cabbageMarket/blob/master/cabbageMarket/src/main/java/com/gdj/cabbage/WebSocketConfig.java" target="_blank">WebSocketConfig</a>/
-                                    	<a href="https://github.com/goodee-project/34_cabbageMarket/blob/master/cabbageMarket/src/main/java/com/gdj/cabbage/controller/ChatController.java" target="_blank">ChatController</a>
-                                    </td>
-                                    <td data-th="Related Keywords">Jquery, Ajax, WebSocket, Sockjs, STOMP</td>
-                                </tr>
+                            
                                 <tr>
                                     <td data-th="Category"><span class="categ html">JAVA</span></td>
-                                    <td data-th="Source"><a href="https://github.com/goodee-project/34_cabbageMarket/tree/master/cabbageMarket/src/main/java/com/gdj/cabbage/controller" target="_blank">Controller</a></td>
+                                    <td data-th="Source"><a href="https://github.com/tjdekf112/A2/tree/main/cast/src/main/java/com/gdu/cast/controller" target="_blank">Controller</a></td>
                                     <td data-th="Related Keywords">Spring MVC, JAVA</td>
                                 </tr>
                                 <tr>
                                     <td data-th="Category"><span class="categ html">JAVA</span></td>
-                                    <td data-th="Source"><a href="https://github.com/goodee-project/34_cabbageMarket/tree/master/cabbageMarket/src/main/java/com/gdj/cabbage/restapi" target="_blank">Rest Controller</a></td>
-                                    <td data-th="Related Keywords">Spring MVC, JAVA</td>
-                                </tr>
-                                <tr>
-                                    <td data-th="Category"><span class="categ html">JAVA</span></td>
-                                    <td data-th="Source"><a href="https://github.com/goodee-project/34_cabbageMarket/tree/master/cabbageMarket/src/main/java/com/gdj/cabbage/service" target="_blank">Service</a></td>
+                                    <td data-th="Source"><a href="https://github.com/tjdekf112/A2/tree/main/cast/src/main/java/com/gdu/cast/service" target="_blank">Service</a></td>
                                     <td data-th="Related Keywords">Spring MVC, JAVA</td>
                                 </tr>
                                 <tr>
                                     <td data-th="Category"><span class="categ css">Mybatis</span></td>
-                                    <td data-th="Source"><a href="https://github.com/goodee-project/34_cabbageMarket/tree/master/cabbageMarket/src/main/java/com/gdj/cabbage/mapper" target="_blank">Mapper</a></td>
+                                    <td data-th="Source"><a href="https://github.com/tjdekf112/A2/tree/main/cast/src/main/java/com/gdu/cast/mapper" target="_blank">Mapper</a></td>
                                     <td data-th="Related Keywords">Mybatis, SQL</td>
                                 </tr>
                                 <tr>
                                     <td data-th="Category"><span class="categ css">dependency</span></td>
-                                    <td data-th="Source"><a href="https://github.com/goodee-project/34_cabbageMarket/blob/master/cabbageMarket/pom.xml" target="_blank">pom.xml</a></td>
+                                    <td data-th="Source"><a href="https://github.com/tjdekf112/A2/blob/main/cast/pom.xml" target="_blank">pom.xml</a></td>
                                     <td data-th="Related Keywords">Spring Boot</td>
                                 </tr>
                             </tbody>
@@ -349,32 +333,31 @@ p.introduce{
                                 <img class="gallery-image-thumb" src="./img/sakilaImage.png" aria-describedby="work1Description">
                             </div>
                             <figcaption class="gallery-caption">
-                                <h3 class="gallery-title">DVD 대여점 프로그램</h3>
+                                <h3 class="gallery-title">Ebook 쇼핑몰</h3>
                                 <ul class="gallery-spec">
-                                	<li class="gallery-spec-item"><strong class="gallery-spec-key">진행기간</strong> <span class="gallery-spec-value">2021.05.26 - 2021.06.25(4주)</span></li>
+                                	<li class="gallery-spec-item"><strong class="gallery-spec-key">진행기간</strong> <span class="gallery-spec-value">2021.09. - 2021.10.(4주)</span></li>
                                 	<li class="gallery-spec-item"><strong class="gallery-spec-key">개발환경 OS</strong> <span class="gallery-spec-value">Window 10</span></li>
-                                    <li class="gallery-spec-item"><strong class="gallery-spec-key">프로젝트 방식</strong> <span class="gallery-spec-value">SPRING MVC</span></li>
-                                    <li class="gallery-spec-item"><strong class="gallery-spec-key">사용프로그램</strong> <span class="gallery-spec-value">SPRING TOOL SUITE 2.4.5, HEIDISQL 11.0.0.5919</span></li>
+                                    <li class="gallery-spec-item"><strong class="gallery-spec-key">프로젝트 방식</strong> <span class="gallery-spec-value">eclipse</span></li>
+                                    <li class="gallery-spec-item"><strong class="gallery-spec-key">사용프로그램</strong> <span class="gallery-spec-value">eclipse 12.12, HEIDISQL 11.0.0.5919</span></li>
                                     <li class="gallery-spec-item"><strong class="gallery-spec-key">사용언어</strong>
                                         <ul class="gallery-spec-value palette">
                                             <li>
                                             	<div class="langImg"><img class="gallery-image-thumb" src="./img/langIcon/pront.png" width="90" height="30"></div>
                                             	<div class="langImg"><img class="gallery-image-thumb" src="./img/langIcon/java.png" width="30" height="30"></div>
                                             	<div class="langImg"><img class="gallery-image-thumb" src="./img/langIcon/jquery.png" width="30" height="30"></div>
-                                            	<div class="langImg"><img class="gallery-image-thumb" src="./img/langIcon/mybatis.png" width="45" height="30"></div>
 											</li>
                                         </ul>
                                     </li>
                                 </ul>
                                 <div id="work1Description">
-                                    <p><a href="https://sksskaw.kro.kr/sakila/index" target="_blank">DVD 대여점 프로그램</a>의 메인 페이지를 Dashboard로 디자인하여 간단한 통계 정보와 chart.js를 이용하여 그래프 통계를 출력하였습니다. 각각의 출력값들은 ajax를 이용한 비동기 통신으로 가져옵니다.</p>
+                                    <p><a href="https://sksskaw.kro.kr/sakila/index" target="_blank">E북 쇼핑몰</a>을 이용하여 고객의 대여와 대여정보를 간단하게 출력하는 사이트</p>
                                     <p></p>
                                 </div>
                                 <div class="ui-group">
-                                	<a role="button" class="ui-button" href="./sakila_function_definition.html" target="_blank">기능 정의서</a>
-                                	<a role="button" class="ui-button" href="./img/sakila_ERD.png" target="_blank">ERD</a>
+<!--                                 	<a role="button" class="ui-button" href="./sakila_function_definition.html" target="_blank">기능 정의서</a> -->
+<!--                                 	<a role="button" class="ui-button" href="./img/sakila_ERD.png" target="_blank">ERD</a> -->
                                     <a role="button" class="ui-button" href="https://sksskaw.kro.kr/sakila/index" target="_blank">AWS</a>
-                                    <a role="button" class="ui-button" href="https://github.com/sksskaw/sakila_project/tree/master/sakila" target="_blank">Git</a>
+                                    <a role="button" class="ui-button" href="https://github.com/tjdekf112/-shop" target="_blank">Git</a>
                                 </div>
                             </figcaption>
                         </figure>
@@ -388,35 +371,17 @@ p.introduce{
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td data-th="Category"><span class="categ js">JS</span></td>
-                                    <td data-th="Source"><a href="https://github.com/sksskaw/sakila_project/blob/master/sakila/src/main/webapp/template/src/assets/js/demo_1/dashboard.js" target="_blank">dashboard.js</a></td>
-                                    <td data-th="Related Keywords">Jquery, Ajax, chart.js</td>
-                                </tr>
-                                <tr>
                                     <td data-th="Category"><span class="categ html">JAVA</span></td>
-                                    <td data-th="Source"><a href="https://github.com/sksskaw/sakila_project/tree/master/sakila/src/main/java/com/gd/sakila/controller" target="_blank">Controller</a></td>
+                                    <td data-th="Source"><a href="https://github.com/tjdekf112/-shop/tree/master/shop/src/dao" target="_blank">Dao</a></td>
                                     <td data-th="Related Keywords">Spring MVC, JAVA</td>
                                 </tr>
                                 <tr>
-                                    <td data-th="Category"><span class="categ html">JAVA</span></td>
-                                    <td data-th="Source"><a href="https://github.com/sksskaw/sakila_project/tree/master/sakila/src/main/java/com/gd/sakila/restapi" target="_blank">Rest Controller</a></td>
+                                    <td data-th="Category"><span class="categ html">jsp</span></td>
+                                    <td data-th="Source"><a href="https://github.com/tjdekf112/-shop/tree/master/shop/WebContent" target="_blank">View</a></td>
                                     <td data-th="Related Keywords">Spring MVC, JAVA</td>
                                 </tr>
                                 <tr>
-                                    <td data-th="Category"><span class="categ html">JAVA</span></td>
-                                    <td data-th="Source"><a href="https://github.com/sksskaw/sakila_project/tree/master/sakila/src/main/java/com/gd/sakila/service" target="_blank">Service</a></td>
-                                    <td data-th="Related Keywords">Spring MVC, JAVA</td>
-                                </tr>
-                                <tr>
-                                    <td data-th="Category"><span class="categ css">Mybatis</span></td>
-                                    <td data-th="Source"><a href="https://github.com/sksskaw/sakila_project/tree/master/sakila/src/main/java/com/gd/sakila/mapper" target="_blank">Mapper</a></td>
-                                    <td data-th="Related Keywords">Mybatis, SQL</td>
-                                </tr>
-                                <tr>
-                                    <td data-th="Category"><span class="categ css">dependency</span></td>
-                                    <td data-th="Source"><a href="https://github.com/sksskaw/sakila_project/blob/master/sakila/pom.xml" target="_blank">pom.xml</a></td>
-                                    <td data-th="Related Keywords">Spring Boot</td>
-                                </tr>
+                         
                             </tbody>
                         </table>
                     </article>
@@ -428,29 +393,27 @@ p.introduce{
                                 <img class="gallery-image-thumb" src="./img/mall-admin.png" aria-describedby="work1Description">
                             </div>
                             <figcaption class="gallery-caption">
-                                <h3 class="gallery-title">Mall-client, Mall-admin</h3>
+                                <h3 class="gallery-title">일정 관리 사이트</h3>
                                 <ul class="gallery-spec">
-                                	<li class="gallery-spec-item"><strong class="gallery-spec-key">진행기간</strong> <span class="gallery-spec-value">2021.05.26 - 2021.06.25(4주)</span></li>
+                                	<li class="gallery-spec-item"><strong class="gallery-spec-key">진행기간</strong> <span class="gallery-spec-value">2021.10. - 2021.11.(4주)</span></li>
                                 	<li class="gallery-spec-item"><strong class="gallery-spec-key">개발환경 OS</strong> <span class="gallery-spec-value">Window 10</span></li>
-                                    <li class="gallery-spec-item"><strong class="gallery-spec-key">프로젝트 방식</strong> <span class="gallery-spec-value">SPRING MVC</span></li>
-                                    <li class="gallery-spec-item"><strong class="gallery-spec-key">사용프로그램</strong> <span class="gallery-spec-value">SPRING TOOL SUITE 2.4.5, HEIDISQL 11.0.0.5919</span></li>
+                                    <li class="gallery-spec-item"><strong class="gallery-spec-key">프로젝트 방식</strong> <span class="gallery-spec-value">eclipse MVC</span></li>
+                                    <li class="gallery-spec-item"><strong class="gallery-spec-key">사용프로그램</strong> <span class="gallery-spec-value">eclipse 12.12, HEIDISQL 11.0.0.5919</span></li>
                                     <li class="gallery-spec-item"><strong class="gallery-spec-key">사용언어</strong>
                                         <ul class="gallery-spec-value palette">
                                             <li>
                                             	<div class="langImg"><img class="gallery-image-thumb" src="./img/langIcon/pront.png" width="90" height="30"></div>
                                             	<div class="langImg"><img class="gallery-image-thumb" src="./img/langIcon/java.png" width="30" height="30"></div>
                                             	<div class="langImg"><img class="gallery-image-thumb" src="./img/langIcon/jquery.png" width="30" height="30"></div>
-                                            	<div class="langImg"><img class="gallery-image-thumb" src="./img/langIcon/mybatis.png" width="45" height="30"></div>
 											</li>
                                         </ul>
                                     </li>
                                 </ul>
                                 <div id="work1Description">
-                                    <p><a href="https://sksskaw.kro.kr/mall_admin/login.jsp" target="_blank">E-book Store</a>전자도서를 구매할 수 있는 쇼핑몰 웹입니다. 회원관리 및 상품관리를 할 수 있는 관리자 페이지와, 회원이 책을 선택하여 구매할 수 있는 회원 페이지로 2개의 프로젝트로 구성되어있습니다. 하나의 DB를 같이 사용하며 상호작용 할 수 있습니다.</p>
+                                    <p><a href="https://sksskaw.kro.kr/mall_admin/login.jsp" target="_blank">일정 관리 시스템은 </a> 특정 날짜에 일정을 적어두고 확일할때 사용하는 시스템입니다.</p>
                                     <p></p>
                                 </div>
                                 <div class="ui-group">
-                                	<a role="button" class="ui-button" href="./img/mall_ERD.png" target="_blank">ERD</a>
                                     <a role="button" class="ui-button" href="https://sksskaw.kro.kr/mall_admin/login.jsp" target="_blank">AWS</a>
                                     <a role="button" class="ui-button" href="https://github.com/sksskaw/sakila_project/tree/master/sakila" target="_blank">Git</a>
                                 </div>
