--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ p.introduce{
                     <article role="article" id="work1" class="gallery-item" data-animation="fade-left">
                         <figure role="group" class="gallery-figure">
                             <div class="gallery-image">
-                                <img class="gallery-image-thumb" src="./img/cabbageImg.png" aria-describedby="work1Description">
+                                <img class="gallery-image-thumb" src="./img/image1.png" aria-describedby="work1Description">
                             </div>
                             <figcaption class="gallery-caption">
                                 <h3 class="gallery-title">cast(여행체험 예약 사이트)-></h3>
