--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ p.introduce{
                         <figure>
                             <figcaption class="list-caption"><i class="fa fa-certificate" aria-hidden="true"></i> 운전면허 1종 보통</figcaption>
                             <ul class="skill-list checked-list">
-                            	<li>-</li>
+                            	<li>2016.2-</li>
                                 <li>-</li>
                             </ul>
                         </figure>
@@ -239,7 +239,7 @@ p.introduce{
                         <figure>
                             <figcaption class="list-caption"><i class="fa fa-certificate" aria-hidden="true"></i> 파워포인트 자격증</figcaption>
                             <ul class="skill-list checked-list">
-                            	<li>-</li>
+                            	<li>2016.12</li>
                                 <li>-</li>
                             </ul>
                         </figure>
@@ -262,7 +262,7 @@ p.introduce{
                     <article role="article" id="work1" class="gallery-item" data-animation="fade-left">
                         <figure role="group" class="gallery-figure">
                             <div class="gallery-image">
-                                <img class="gallery-image-thumb" src="./img/image1.png" aria-describedby="work1Description">
+                                <img class="gallery-image-thumb" src="./img/image1.PNG" aria-describedby="work1Description">
                             </div>
                             <figcaption class="gallery-caption">
                                 <h3 class="gallery-title">cast(여행체험 예약 사이트)-></h3>
@@ -286,7 +286,7 @@ p.introduce{
                                     <p><a href="https://sksskaw.kro.kr/cabbageMarket/index" target="_blank">여행체험 예약 사이트</a> 직거래, 중고거래, 경매거래를 안전거래로 이용할 수 있는 서비스 플랫폼입니다. 직거래 서비스 이용시 상품 판매자와 구매자간의 1:1 채팅을 통해 소통할 수 있습니다. WebSocket, Sockjs, STOMP를 이용하여 구현하였습니다.</p>
                                 </div>
                                 <div class="ui-group">
-                                    <a role="button" class="ui-button" href="https://sksskaw.kro.kr/cabbageMarket/index" target="_blank">AWS</a>
+                                    <a role="button" class="ui-button" href="https://3.38.166.31/cast/index" target="_blank">AWS</a>
                                     <a role="button" class="ui-button" href="https://github.com/tjdekf112/A2" target="_blank">Git</a>
                                 </div>
                             </figcaption>
@@ -356,7 +356,7 @@ p.introduce{
                                 <div class="ui-group">
 <!--                                 	<a role="button" class="ui-button" href="./sakila_function_definition.html" target="_blank">기능 정의서</a> -->
 <!--                                 	<a role="button" class="ui-button" href="./img/sakila_ERD.png" target="_blank">ERD</a> -->
-                                    <a role="button" class="ui-button" href="https://sksskaw.kro.kr/sakila/index" target="_blank">AWS</a>
+                                    <a role="button" class="ui-button" href="https://3.38.166.31/shop/index.jsp" target="_blank">AWS</a>
                                     <a role="button" class="ui-button" href="https://github.com/tjdekf112/-shop" target="_blank">Git</a>
                                 </div>
                             </figcaption>
@@ -414,7 +414,7 @@ p.introduce{
                                     <p></p>
                                 </div>
                                 <div class="ui-group">
-                                    <a role="button" class="ui-button" href="https://sksskaw.kro.kr/mall_admin/login.jsp" target="_blank">AWS</a>
+                                    <a role="button" class="ui-button" href="https://3.38.166.31/todo/login" target="_blank">AWS</a>
                                     <a role="button" class="ui-button" href="https://github.com/sksskaw/sakila_project/tree/master/sakila" target="_blank">Git</a>
                                 </div>
 
