--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@ p.introduce{
                                 <div class="ui-group">
                                     <a role="button" class="ui-button" href="http://3.38.166.31/cast/index" target="_blank">AWS</a>
                                     <a role="button" class="ui-button" href="https://github.com/tjdekf112/A2" target="_blank">Git</a>
+				    <a role="button" class="ui-button" src="./img/shop.png" target="_blank">ERD</a>
                                 </div>
                             </figcaption>
                         </figure>
@@ -358,6 +359,7 @@ p.introduce{
 <!--                                 	<a role="button" class="ui-button" href="./img/sakila_ERD.png" target="_blank">ERD</a> -->
                                     <a role="button" class="ui-button" href="http://3.38.166.31/shop/index.jsp" target="_blank">AWS</a>
                                     <a role="button" class="ui-button" href="https://github.com/tjdekf112/-shop" target="_blank">Git</a>
+				    <a role="button" class="ui-button" src="./img/todo.png" target="_blank">ERD</a>
                                 </div>
                             </figcaption>
                         </figure>
